# DataSourceTask

./: .clang-format  .gitignore  CMakeLists.txt  README.md  toolchain-windows-mingw.cmake
example/: DataSourceFileEmulator.cpp  DataSourceFileEmulator.h  main.cpp
include/: DataSource.h  DataSourceBuffer.h  DataSourceController.h  DataSourceEmulator.h  DataSourceFile.h  DataSourceFrameProcessor.h  DataSourceFrameRecorder.h  globals.h
private/: DataSource.cpp  DataSourceController.cpp  DataSourceEmulator.cpp  DataSourceFile.cpp  DataSourceFrameProcessor.cpp  DataSourceFrameRecorder.cpp
